--- a/src/views/admin/products.ejs
+++ b/src/views/admin/products.ejs
@@ -74,6 +74,16 @@
                     <div class="error-text" data-error-for="descuento"></div>
                 </div>
                 <div class="form-group">
+                    <label for="productRam">Ram:</label>
+                    <select id="productoRam" name="ram`">Ram</select>
+                    <div class="error-text" data-error-for="ram"></div>
+                </div>
+                <div class="form-group" id="AlmGroup">
+                    <label for="productoAlm">Almacenamiento:</label>
+                    <select id="productoAlm" name="almacenamiento">Almacenamiento</select>
+                    <div class="error-text" data-error-for="almacenamiento"></div>
+                </div>
+                <div class="form-group">
                     <label for="productName">Categoría:</label>
                     <select id="productoCategoria" name="categoria"></select>
                     <div class="error-text" data-error-for="categoria"></div>
