--- a/src/views/admin/variants.ejs
+++ b/src/views/admin/variants.ejs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/css/toastify.css">
   <link rel="stylesheet" href="/css/adminTable.css">
   <link rel="stylesheet" href="/css/error.css">
-  <link rel="stylesheet" href="/css/variant.css">
+  <link rel="stylesheet" href="/css/adminResult.css">
 
   <div class="main-content">
     <header class="header">
@@ -93,6 +93,27 @@
       </form>
     </div>
   </div>
+
+  <style>
+    .clear-file-btn {
+    position: absolute;
+    right: 6px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 2px 6px;
+    font-size: 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.clear-file-btn:hover {
+    background-color: #c0392b;
+}
+  </style>
 
   <script type="module" src="/js/adminVariant.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
