--- a/public/css/adminTable.css
+++ b/public/css/adminTable.css
@@ -155,6 +155,8 @@
     max-width: 448px;
     transform: scale(0.95);
     transition: transform 0.3s ease;
+    max-height: 90vh;   
+    overflow-y: auto; 
 }
 
 .modal-overlay.visible .modal-content {
