--- a/src/views/admin/device.ejs
+++ b/src/views/admin/device.ejs
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="/css/adminTable.css">
 <link rel="stylesheet" href="/css/error.css">
 <link rel="stylesheet" href="/css/adminResult.css">
+<link rel="stylesheet" href="/css/specsResult.css">
 
 <div class="main-content">
     <header class="header">
@@ -56,8 +57,13 @@
         <form id="deviceForm" class="modal-form">
             <input type="hidden" id="deviceId">
             <div class="form-group">
-                <label for="deviceName">Nombre:</label>
-                <input type="text" id="deviceName" name="nombre" autocomplete="off" readonly>
+                <label for="searchMobileInput">Buscar Móvil:</label>
+                <input type="text" id="searchMobileInput" autocomplete="off" placeholder="Busca un móvil para asignar">
+                <div id="suggestionsMobile" class="suggestions-list"></div>
+            </div>
+            <div class="form-group">
+                <label>Móviles seleccionados:</label>
+                <ul id="selectedMobilesList"></ul>
             </div>
             <div class="form-group">
                 <label for="deviceCpu">CPU:</label>
@@ -93,15 +99,6 @@
                 <label for="deviceSizeWeight">Dimensiones/Peso:</label>
                 <input type="text" id="deviceSizeWeight" name="dimensionespeso" autocomplete="off">
                 <div id="suggestionsSizeWeight" class="suggestions-list"></div>
-            </div>
-            <div class="form-group">
-                <label for="searchMobileInput">Buscar Móvil:</label>
-                <input type="text" id="searchMobileInput" autocomplete="off" placeholder="Busca un móvil para asignar">
-                <div id="suggestionsMobile" class="suggestions-list"></div>
-            </div>
-            <div class="form-group">
-                <label>Móviles seleccionados:</label>
-                <ul id="selectedMobilesList"></ul>
             </div>
             <div class="modal-buttons">
                 <button type="button" id="cancelDeviceModalBtn" class="cancel-button">Cancelar</button>
