--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -19,6 +19,12 @@
             <nav>
                 <ul>
                     <li>
+                        <a href="/api/admin/panel" class="<%= req.originalUrl === '/api/admin/panel' ? 'active' : '' %>">
+                            <i class="fas fa-tachometer-alt"></i>
+                            <span>Panel Administrador</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="/admin/products"
                             class="<%= req.originalUrl === '/admin/products' ? 'active' : '' %>">
                             <i class="fas fa-box-open"></i>
