--- a/src/views/store/orderDetails.ejs
+++ b/src/views/store/orderDetails.ejs
@@ -30,10 +30,19 @@
                     <div class="col-md-6-details">
                         <h5 class="tittle5">Detalles</h5>
                         <p class="Information-details">
-                            <strong>Fecha:</strong> <%= new Date(order.fecha_creacion).toLocaleString() %><br>
-                            <strong>Estado:</strong> <span class="badge-details <%= order.status === 'pagado' ? 'badge-success-details' : '' %>">
-                                <%= order.status %>
-                            </span><br>
+                            <strong>Fecha:</strong>
+                            <%= new Date(order.fecha_creacion).toLocaleString() %><br>
+                                <strong>Estado:</strong> <span
+                                    class="badge-details <%= order.status === 'pagado' ? 'badge-success-details' : '' %>">
+                                    <%= order.status %>
+                                </span><br>
+                                <strong>Estado de Envío:</strong>
+                                <span class="badge-details <%= order.estado_envio === 'enviado' ? 'badge-warning-details' : 
+                                    order.estado_envio === 'entregado' ? 'badge-success-details' :
+                                    order.estado_envio === 'cancelado' ? 'badge-danger-details' : 
+                                    order.estado_envio === 'pendiente' ? 'badge-pending-details' : '' %>">
+                                    <%= order.estado_envio ? order.estado_envio.toUpperCase() : 'PENDIENTE' %>
+                                </span><br>
                             <strong class="strong-details">Total:</strong> $<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
                         </p>
                     </div>
@@ -81,8 +90,16 @@
             </div>
           </div>
         </div>
+        <div class="cancel-message">
+            <p>
+                ¿Quieres cancelar tu pedido?
+                Por favor <strong>contáctanos</strong> a <a href="mailto:info@lavegatechgsrl.com">info@lavegatechgsrl.com</a> o al
+                teléfono
+                <a href="tel:+18091234567">+1 (809)-277-2371</a>.
+            </p>
+        </div>
         <a href="/api/order/showOrders" class="btn-details no-in-pdf">Volver</a>
-    </div>
+        </div>
 
     <%- include('../partials/footer.ejs') %>
 
