--- a/src/views/store/showOrders.ejs
+++ b/src/views/store/showOrders.ejs
@@ -21,7 +21,16 @@
                     <a href="/api/order/orderDetails/<%= order.id %>" class="list-group-product">
                         <div class="d-flex-user w-100-user justify-content-user">
                             <h5 class="mb-1">Pedido #<%= order.id %></h5>
-                            <small class="text-muted-user"><%= new Date(order.fecha_creacion).toLocaleDateString() %></small>
+                            <div class="right-info-user">
+                                <span class="badge-user 
+                                    <%= order.estado_envio === 'enviado' ? 'bg-info-user' :
+                                        order.estado_envio === 'entregado' ? 'bg-success-user' :
+                                        order.estado_envio === 'cancelado' ? 'bg-danger-user' :
+                                        'bg-warning-user' %> ms-2">
+                                    <%= order.estado_envio ? order.estado_envio.toUpperCase() : 'PENDIENTE' %>
+                                </span>
+                                <small class="text-muted-user"><%= new Date(order.fecha_creacion).toLocaleDateString() %></small>
+                            </div>
                         </div>
                         <p class="mb-1-user">
                             <span class="strong-details">Total:</span> $<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %>
