--- a/src/views/store/orderDetails.ejs
+++ b/src/views/store/orderDetails.ejs
@@ -62,7 +62,7 @@
                             <th>Color</th>
                             <th>Cantidad</th>
                             <th>Precio</th>
-                            <th>Envío $</th>
+                            <th>Envío</th>
                             <th>Descuento%</th>
                             <th>Subtotal</th>
                         </tr>
@@ -82,8 +82,8 @@
                     </tbody>
                     <tfoot>
                         <tr>
-                            <th colspan="5" style="text-align: right;">Total</th>
-                            <th>$<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></th>
+                            <th colspan="6" style="text-align: right; font-size: 1.2em;">Total</th>
+                            <th style="font-size: 1.2em;">$<%= Number(order.total).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, "," ) %></th>
                         </tr>
                     </tfoot>
                 </table>
